changed a couple styling things and added a read me file

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body {
   font-size: 16px;
   line-height: 1;
 }
-
+body .container{
+height: 500px;
+overflow: auto;
+}
 textarea{
   background: transparent;
   border: none;
